Stabilize Windows CI after conflict merge
Normalize macro file line endings before hashing so golden transcript macro hashes are identical on Windows and Unix checkouts.

Restore the hosted Windows com0com gate to skip the serial lane when the virtual driver cannot be provisioned, while keeping the Linux serial integration lane and all normal Windows Maven verification active.

This keeps PR #6 mergeable into codex/implement-initial-spec without making text-file hashes or hosted-driver availability platform-dependent.